kubernetes/backend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cosy-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cosy-backend
  template:
    metadata:
      labels:
        app: cosy-backend
    spec:
      containers:
        - name: cosy-backend
          image: ghcr.io/magenta-mause/cosy-backend:sha-d8a966e
          securityContext:
            runAsUser: 0
            runAsGroup: 0
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: docker-socket
              mountPath: /var/run/docker.sock
            - name: server-volume-mounts
              mountPath: /etc/server-volume-mounts
          
          resources:
            limits:
              memory: "1Gi"
              cpu: "500m"
            requests:
              memory: "512Mi"
              cpu: "250m"

          livenessProbe:
            httpGet:
              path: /api/actuator/health
              port: 8080
            initialDelaySeconds: 90
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /api/actuator/health
              port: 8080
            initialDelaySeconds: 90
            periodSeconds: 5

      volumes:
        - name: docker-socket
          hostPath:
            path: /var/run/docker.sock
            type: Socket
        - name: server-volume-mounts
          hostPath: 
            path: /etc/cosy/volume-mounts
